// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact should render contact form 1`] = `
<div>
  <form
    class="form"
  >
    <input
      class="input className"
      data-testid="name"
      name="fullName"
      placeholder="form.name"
      type="text"
    />
    <p
      class="form__error"
    />
    <input
      class="input className"
      data-testid="email"
      name="email"
      placeholder="Email"
      type="text"
    />
    <p
      class="form__error"
    />
    <div
      class="select__wrapper"
    >
      <select
        class="select className"
        name="topic"
      >
        <option
          disabled=""
          selected=""
          value="topic"
        >
          form.topic
        </option>
        <option
          class="className"
          value="Business"
        >
          business
        </option>
        <option
          class="className"
          value="Economy"
        >
          economy
        </option>
        <option
          class="className"
          value="Startup"
        >
          startup
        </option>
        <option
          class="className"
          value="Technology"
        >
          technology
        </option>
      </select>
      <svg
        class="arrow"
        fill="currentColor"
        focusable="false"
        height="8"
        role="img"
        viewBox="0 0 12 8"
        width="12"
      >
        <path
          d="M2 2L6 6L10 2"
          stroke="black"
          stroke-linecap="square"
          stroke-width="2"
        />
      </svg>
    </div>
    <p
      class="form__error"
    />
    <textarea
      class="textarea className"
      data-testid="message"
      name="message"
      placeholder="form.message"
    />
    <p
      class="form__error"
    />
    <button
      class="button"
      type="submit"
    >
      form.send
    </button>
  </form>
</div>
`;

exports[`Contact should render contact page 1`] = `
<div>
  <section>
    <div
      class="contact__wrapper"
    >
      <div
        class="heading__wrapper"
      >
        <h5>
          heading.subtitle
        </h5>
        <h1
          class="className"
        >
          heading.title
        </h1>
        <p
          class="body-s"
        >
          heading.body
        </p>
      </div>
      <div
        class="info__wrapper"
      >
        <div>
          <p
            class="info__heading  body-l"
          >
            info.working
          </p>
          <h4
            class="className"
          >
            info.days
          </h4>
          <h4
            class="className"
          >
            info.hours
          </h4>
          <p
            class="body-s"
          >
            info.support
          </p>
        </div>
        <div>
          <p
            class="info__heading body-l"
          >
            info.contact
          </p>
          <h4
            class="className"
          >
            020 7993 2905
          </h4>
          <p
            class="body-s"
          >
            hello@finsweet.com
          </p>
        </div>
      </div>
      <form
        class="form"
      >
        <input
          class="input className"
          data-testid="name"
          name="fullName"
          placeholder="form.name"
          type="text"
        />
        <p
          class="form__error"
        />
        <input
          class="input className"
          data-testid="email"
          name="email"
          placeholder="Email"
          type="text"
        />
        <p
          class="form__error"
        />
        <div
          class="select__wrapper"
        >
          <select
            class="select className"
            name="topic"
          >
            <option
              disabled=""
              selected=""
              value="topic"
            >
              form.topic
            </option>
            <option
              class="className"
              value="Business"
            >
              business
            </option>
            <option
              class="className"
              value="Economy"
            >
              economy
            </option>
            <option
              class="className"
              value="Startup"
            >
              startup
            </option>
            <option
              class="className"
              value="Technology"
            >
              technology
            </option>
          </select>
          <svg
            class="arrow"
            fill="currentColor"
            focusable="false"
            height="8"
            role="img"
            viewBox="0 0 12 8"
            width="12"
          >
            <path
              d="M2 2L6 6L10 2"
              stroke="black"
              stroke-linecap="square"
              stroke-width="2"
            />
          </svg>
        </div>
        <p
          class="form__error"
        />
        <textarea
          class="textarea className"
          data-testid="message"
          name="message"
          placeholder="form.message"
        />
        <p
          class="form__error"
        />
        <button
          class="button"
          type="submit"
        >
          form.send
        </button>
      </form>
    </div>
    <div
      class="map__wrapper"
    >
      <iframe
        allowfullscreen=""
        height="100%"
        loading="lazy"
        referrerpolicy="no-referrer-when-downgrade"
        src="https://www.google.com/maps/d/u/0/embed?mid=1UndmFwsUO1yidEWv7GjURvLv5E9UOrM&ehbc=2E312F"
        style="border: 0px;"
        title="map"
        width="100%"
      />
    </div>
  </section>
</div>
`;
